Allow a max line length of 100

--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,6 @@ commands=
 basepython=python3.6
 deps = flake8==3.3.0
 commands = flake8 --max-complexity 10 pep543 test
+
+[flake8]
+max-line-length=100
