--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ deps= -r{toxinidir}/test_requirements.txt
 commands=
     coverage run -m py.test {posargs} {toxinidir}/test/
     coverage report
+passenv = CFLAGS LDFLAGS
 
 [testenv:lint]
 basepython=python3.6
